// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Toolbar should display nav with children 1`] = `
<div role="toolbar"
     class="tc-list-toolbar theme-tc-list-toolbar navbar navbar-default"
>
  <div class="container-fluid">
    <div>
      Hello
    </div>
  </div>
</div>
`;

exports[`List Toolbar should display nav with li and separator 1`] = `
<div role="toolbar"
     class="tc-list-toolbar theme-tc-list-toolbar navbar navbar-default"
>
  <div class="container-fluid">
    <ul class="tc-list-toolbar-right theme-tc-list-toolbar-right">
      <li class="tc-list-toolbar-separated theme-tc-list-toolbar-separated">
        <div>
          Hello
        </div>
      </li>
      <li class="tc-list-toolbar-separated theme-tc-list-toolbar-separated">
        <div>
          World
        </div>
      </li>
    </ul>
  </div>
</div>
`;
